-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.3, 6.8.0
-
None
-
-
1296afc3a (dev), 8c9031d1a (6.8), cbf66b439 (6.7), 09182df1b (tqtc/lts-6.5)
-
2024wk26s2FOQtforAndroid, 2024wk28s2FOQtforAndroid, 2024wk30s2FOQtforAndroid
There is a regression with playing some videos on Android (using h.264 codec).
Some videos seem to not play the first time (but they play correctly after the second try in the row).
Bug can be reproduced with attached example.
It seems that the regression appeared when moved from FFmpeg 6.0 to FFmpeg 6.1 (This happened after this change: https://lists.ffmpeg.org/pipermail/ffmpeg-cvslog/2023-July/138091.html)
For Gerrit Dashboard: QTBUG-126428 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
577248,5 | FFmpeg decoder: Retry receiveAVFrames for EAGAIN if stream is end | dev | qt/qtmultimedia | Status: MERGED | +2 | +1 |
579662,2 | FFmpeg decoder: Retry receiveAVFrames for EAGAIN if stream is end | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
579732,2 | FFmpeg decoder: Retry receiveAVFrames for EAGAIN if stream is end | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
579750,2 | FFmpeg decoder: Retry receiveAVFrames for EAGAIN if stream is end | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |